@@ -15,7 +15,6 @@ public:
    virtual void Polygon(const Vertex2D * const rgv, const int count);
    virtual void Polygon(const std::vector<RenderVertex> &rgv);
    virtual void PolygonImage(const std::vector<RenderVertex> &rgv, HBITMAP hbm, const float left, const float top, const float right, const float bottom, const int bitmapwidth, const int bitmapheight);
-   virtual void PolygonImageRaw(const std::vector<RenderVertex> &rgv, BYTE *hbm, const float left, const float top, const float right, const float bottom, const int bitmapwidth, const int bitmapheight);
 
    virtual void Polyline(const Vertex2D * const rgv, const int count);
    virtual void Lines(const Vertex2D * const rgv, const int count);
